--- a/client/public/index.html
+++ b/client/public/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
-    <title>같이코딩 - 돈버는 코딩 같이하자!</title>
+    <title>같이코딩 - 실전형 예제로 시작하는 코딩</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
